[tool.poetry]
name = "airtimesocial"
version = "0.1.0"
description = ""
authors = ["0xZaddyy <oyinoladapo5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
africastalking = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
